# average_color

./: Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml  rust.yml
src/: average_color.rs  dominant_color.rs  enums.rs  lib.rs  main.rs  utils.rs
tests/: test.rs
