[package]
name = "dominant-color"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17" }
tokio = { version = "1.11.0", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.10.0" }
image = "0.23.14"
