[package]
name = "average_color"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/ahkohd/get_average"
readme = "README.md"

description = "Simple image average color extractor written in Rust"
license = "MIT"
authors = ["Victor Aremu <victor.olorunbunmi@gmail.com>"]
categories = ["algorithms", "multimedia::images"]

[dependencies]
futures = { version = "0.3.17" }
tokio = { version = "1.11.0", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.10.0" }
image = "0.23.14"
