[package]
name = "average_color"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/ahkohd/get_average"
readme = "README.md"

description = "Get the average color of an image"
license = "MIT"
authors = ["Victor Aremu <victor.olorunbunmi@gmail.com>"]
categories = ["algorithms", "multimedia::images"]

exclude = ["tests/*"]

[dependencies]
futures = { version = "0.3.17" }
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
async-std = { version = "1.12.0" }
image = "0.24.8"
